2013-12-16  Allan McRae  <allan@archlinux.org>

	* configure.ac: Set AUTOCONF when maintainer-mode is not used.
	* configure: Regenerated.

	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: Update file name.

	[BZ #14120]
	* configure.ac: Added --enable-maintainer-mode. Check for
	autoconf when enabled.
	* configure: Regenerated.

	* nscd/nscd.service: New file.
	* nscd/nscd.tmpfiles: New file.

2013-12-14  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #12100]
	* sysdeps/x86_64/multiarch/strstr-sse2-unaligned.S: New file
	* sysdeps/x86_64/multiarch/strstr-c.c: Moved to ...
	* sysdeps/x86_64/multiarch/strstr.c: ... here.
	(strstr): Add __strstr_sse2_unaligned ifunc.
	* sysdeps/x86_64/multiarch/strcasestr-c.c: Moved to ...
	* sysdeps/x86_64/multiarch/strcasestr.c ... here.
	(strcasestr): Remove __strcasestr_sse42 ifunc.
	* sysdeps/x86_64/multiarch/strcasestr-nonascii.c: Remove.
	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: Update.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Update.

2013-12-14  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/sh4/fpu/bits/fenv.h: Move to ...
	* sysdeps/sh/bits/fenv.h: ... here.
	* sysdeps/sh/sh4/fpu/bits: Remove directory.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* NEWS: Mention ppc64 STT_GNU_IFUNC support.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile: Add hypot and
	hypotf multiarch implementations.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypot-power7.c: New file.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypot-ppc64.c: New file.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypot.c: New file:
	multiarch hypot for PPC64.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypotf-power7.c: New file.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypotf-ppc64.c: New file.
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypotf.c : New file:
	multiarch hypotf for PPC64.

2013-12-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
